Update and rename 2021-10-28-dcm.md to 2021-10-28-projects.md

--- a/_posts/2021-10-28-projects.md
+++ b/_posts/2021-10-28-projects.md
@@ -1,5 +1,7 @@
 ---
 title: "Applied Statistics: Causal Inference in Economic Analysis and Machine Learning Methods "
+collection: projects
+permalink: /projects/
 date: 2021-10-28
 tags: [ML, Causal Inference,]
 header:
@@ -10,7 +12,26 @@ mathjax: "false"
 
 ## Applied Statistics: Causal Inference in Economic Analysis and Machine Learning Methods
 
-You can find my repo [here](https://github.com/stephyriega/ML_CI). In this course we develop a series of proyects and replications in R and Python using Machine Learning in Causal Inference. I will explain about the labs developed here:
+You can find my repo [here](https://github.com/stephyriega/ML_CI). In this course we develop a series of proyects and replications in R and Python using Machine Learning in Causal Inference. Overall, here is resume of the methods and models that were developed:
+
+Methods:
+- Data splitting
+- Partialling out
+- Cross validation
+- Boostraping
+- Bagging
+
+Models:
+- OLS (with RCT data)
+- IRA & CRA
+- Lasso & Dobble lasso
+- Tree and Random Forest
+- Causal Tree & Random Forest
+- Debiased Machine Learning
+
+
+I will explain with more details about the labs developed here:
+
 
 
 * [1. An inferential problem: The Gender Wage Gap](https://github.com/stephyriega/ML_CI/tree/main/An%20inferential%20problem%20The%20Gender%20Wage%20Gap)
@@ -38,22 +59,4 @@ You can find my repo [here](https://github.com/stephyriega/ML_CI). In this cours
   We did the replication of Estimating Treatment Effects with Causal Forests: An Application by Athey and Wager (2018). The objetive of this paper is to evaluate the impact of a nudge-like intervention designed to instill students with a growth mindset on student achievement using simulated data from a model fit from the National Study of Learning Mindsets. This paper aims to answer three questions: Was the mindset intervention efective in improving student achievement? Was the efect of the intervention moderated by school level achievement or pre-existing mindset norms? Do other covariates moderate treatment efects?. With the tuned parameters, we estimate the ATE that is 0.248, however we need to prove whether the causal forest would succed in accurately estimating treatment heterogeneity since we don't know if it is better estimate of the real effect than the ATE. It finds that if we insists in cluster-robust inference, there's almost no treatment heterogenity present and thus that the causal forest couldn't identify subgroups with effects at stand. This results remain since they are cluster-robust and do not change if we estimated without fitting the propensity score. We also estimate Debiased Machine Learning to compare Baseline OLS, Least Squares with controls, Lasso, Post-Lasso, CV Lasso, CV Elnet, CV Ridge, Random Forest and Best model. It looks like the best method for predicting D is CV Ridge, and the best method for predicting Y is Post-Lasso because the RMSE of these models are the smallest.
 
 
-## Overall, here is resume of the methods and models that were developed:
-
-
-Methods available:
-- Data splitting
-- Partialling out
-- Cross validation
-- Boostraping
-- Bagging
-
-Models available:
-- OLS (with RCT data)
-- IRA, CRA
-- Lasso
-- Dobble lasso
-- Tree and Random Forest
-- Causal Tree & Random Forest
-- Debiased Machine Learning
 
