--- a/_publications/2021-07-01-g-3.md
+++ b/_publications/2021-07-01-g-3.md
@@ -1,12 +1,14 @@
 ---
-title: "Assited in Nudging Microentrepreneurs into Formalization under High Drug-Related Violence: Experimental Evidence from Urban Brazil"
+title: "Assited in Event study on the rate fertility and the Football World Cup"
 collection: publications
-permalink: /publication/2021-03-01-g-1
+permalink: /publication/2021-07-01-g-3
 excerpt: 'While working as a research intern at GRADE'
-date: 2021-03-01
+date: 2021-07-01
 venue: ''
 paperurl: ''
 citation: ''
 ---
 
-Assited in the elaboration of estimations and graphs using an RCT dataset related to the impact evaluation of reminders on labour formalization programme in Brazil. I made use of Stata and LateX to this programm the calculations as well as to model the tables and them exported to Latex. I calcuted the heterogenous effects of programmes between clusters, made test to the compare two coefficients of the same estimation and graphed the evolution of the ATE effects in time.
+Supported in the construction of a synthetic data panel of women in the age to conceveive, analysis of the dataset (tables and graphs) and estimation of a panel event study on the fertility rate in Peru. Our main dataset was built originally from Encuesta Demográfica y de Salud Familiar (ENDES) from 1996 to 2020 and I made use of Stata for this task. 
+
+I estimated the ammount of women who were pregnant by week and month. After reducing the data to go from 2010-2020, I reconstruted some sociodemographic characteristics an pregnant history in order to the construst a synthetic panel with 12 million observations. 
