--- a/_publications/2022-04-01-i-2.md
+++ b/_publications/2022-04-01-i-2.md
@@ -1,12 +1,17 @@
 ---
-title: "Assited in Nudging Microentrepreneurs into Formalization under High Drug-Related Violence: Experimental Evidence from Urban Brazil"
+title: "Assited in the impact evaluation of the remote project "Socioemotional Support in times of COVID-19" in Nicaragua"
 collection: publications
-permalink: /publication/2021-03-01-g-1
-excerpt: 'While working as a research intern at GRADE'
-date: 2021-03-01
+permalink: /publication/2022-04-01-i-2
+excerpt: 'While working as a research intern at IPA'
+date: 2022-04-01
 venue: ''
 paperurl: ''
 citation: ''
 ---
 
-Assited in the elaboration of estimations and graphs using an RCT dataset related to the impact evaluation of reminders on labour formalization programme in Brazil. I made use of Stata and LateX to this programm the calculations as well as to model the tables and them exported to Latex. I calcuted the heterogenous effects of programmes between clusters, made test to the compare two coefficients of the same estimation and graphed the evolution of the ATE effects in time.
+Assited in the implementation of the remote project "Socioemotional Support in times of COVID-19" in Nicaragua, an experimental intervention carried out in partnership with the Ministry of Family, BID and Zamora Teran's Foundation in Nicaragua. \\
+
+As usual, I helped in programming the survey in SurveyCTO, as well as the implementation of remote pilots. However, since the survey was self-managed and via messages, we used Twilio, an cloud contact center platform that allowed us to sends Whatsapp messages, to deliver the link fo the survey and reminders to complete it. \\
+
+I collaborated in creating the flows of messages in the platform, the Python codes that triggers the delivery of them and the data collection flow using Google API and its Google Sheets services. For the progress review of the data colleted by this platform, I also created a dashboard in PowerBI. \\
+
