--- a/_publications/2021-05-01-g-2.md
+++ b/_publications/2021-05-01-g-2.md
@@ -1,12 +1,12 @@
 ---
-title: "Assited in Nudging Microentrepreneurs into Formalization under High Drug-Related Violence: Experimental Evidence from Urban Brazil"
+title: "Assited in Detecting corruption as non-pecuniary damage using Machine Learnig methods"
 collection: publications
-permalink: /publication/2021-03-01-g-1
+permalink: /publication/2021-05-01-g-2
 excerpt: 'While working as a research intern at GRADE'
-date: 2021-03-01
+date: 2021-05-01
 venue: ''
 paperurl: ''
 citation: ''
 ---
 
-Assited in the elaboration of estimations and graphs using an RCT dataset related to the impact evaluation of reminders on labour formalization programme in Brazil. I made use of Stata and LateX to this programm the calculations as well as to model the tables and them exported to Latex. I calcuted the heterogenous effects of programmes between clusters, made test to the compare two coefficients of the same estimation and graphed the evolution of the ATE effects in time.
+Supported in literature review, elaboration of descriptive tables using Stata and data analysis for a investigation that aimed to detect corruption as non-pecuniary damage using Machine Learning methods. In order to do this, I replicated  the paper ["Cálculo del tamaño de la corrupción y la inconducta funcional en el Perú"](https://www.gob.pe/institucion/contraloria/informes-publicaciones/1200963-calculo-del-tamano-de-la-corrupcion-y-la-inconducta-funcional-en-el-peru-una-aproximacion-exploratoria) by Shack, Pérez & Portugal (2020), managed data from La Contraloria General de la Republica (CGR) and was in the process of fuzzy-merging it with information from other entities of the peruvian State.
