--- a/_publications/2021-11-01-i-1.md
+++ b/_publications/2021-11-01-i-1.md
@@ -1,12 +1,19 @@
 ---
-title: "Assited in Nudging Microentrepreneurs into Formalization under High Drug-Related Violence: Experimental Evidence from Urban Brazil"
+title: "Assisted in the implementation and impact evaluation of the semi-remote project "Empower your mind in family" in El Salvador"
 collection: publications
-permalink: /publication/2021-03-01-g-1
-excerpt: 'While working as a research intern at GRADE'
-date: 2021-03-01
+permalink: /publication/2021-11-01-i-1
+excerpt: 'While working as a research intern at IPA'
+date: 2021-11-01
 venue: ''
 paperurl: ''
 citation: ''
 ---
 
-Assited in the elaboration of estimations and graphs using an RCT dataset related to the impact evaluation of reminders on labour formalization programme in Brazil. I made use of Stata and LateX to this programm the calculations as well as to model the tables and them exported to Latex. I calcuted the heterogenous effects of programmes between clusters, made test to the compare two coefficients of the same estimation and graphed the evolution of the ATE effects in time.
+Assited in the implementation and impact evaluation of the semi-remote project "Empower your mind in family" in El Salvador, an experimental intervention carried out in partnership with the Ministry of Education and BID. \\
+
+Helped in programming the survey and audit instruments in SurveyCTO, as well as the implementation of bench testing and presential pilots. I was part of the team that remote trained and managed the survey field and audit team that conducted the data collections in both the baseline and pilot. \\
+
+I also was part in overseeing data collection activities in the on-site pilot, mantaining data quality protocols. Moreover, I was in charge of data quality audits of the endline creating a dashboard in R-Shinny. \\
+
+Finally, I helped in the elaboration of progress and results reports to PIs and research partners. We used the open answers from the survey to make a Natural Language Process (NPL) analysis, using wordclouds and frequency tables of the words used using SpaCy in Python.
+
