--- a/_publications/2021-11-01-i-1.md
+++ b/_publications/2021-11-01-i-1.md
@@ -1,5 +1,5 @@
 ---
-title: "Assisted in the implementation and impact evaluation of the semi-remote project "Empower your mind in family" in El Salvador"
+title: "Assisted in the implementation and impact evaluation of the semi-remote project **Empower your mind in family** in El Salvador"
 collection: publications
 permalink: /publication/2021-11-01-i-1
 excerpt: 'While working as a research intern at IPA'
