--- a/_publications/2022-11-01-i-3.md
+++ b/_publications/2022-11-01-i-3.md
@@ -1,12 +1,16 @@
 ---
-title: "Assited in Nudging Microentrepreneurs into Formalization under High Drug-Related Violence: Experimental Evidence from Urban Brazil"
+title: "Assited in the impact evaluation of the remote project "Real Man Challenge" in Peru"
 collection: publications
-permalink: /publication/2021-03-01-g-1
-excerpt: 'While working as a research intern at GRADE'
-date: 2021-03-01
+permalink: /publication/2022-11-01-i-3
+excerpt: 'While working as a research intern at IPA'
+date: 2022-11-01
 venue: ''
-paperurl: ''
-citation: ''
+#paperurl: ''
+#citation: ''
 ---
 
-Assited in the elaboration of estimations and graphs using an RCT dataset related to the impact evaluation of reminders on labour formalization programme in Brazil. I made use of Stata and LateX to this programm the calculations as well as to model the tables and them exported to Latex. I calcuted the heterogenous effects of programmes between clusters, made test to the compare two coefficients of the same estimation and graphed the evolution of the ATE effects in time.
+Assited in the implementation of the remote project "Real Man Challenge" in Perú, an experimental intervention carried out in partnership with the Ministry of Women and Vulnerable populations of Peru, the World Bank.
+
+Helped in programming the survey and audit instruments in SurveyCTO, as well as the implementation of bench testing and remote pilots. I was part of the team that remote trained and managed the survey field and audit team (~40 surveyors) that conducted the data collections in both the endline collection and its pilot. For the progress review of the data colleted by SCTO of the endline survey and the audit survey, I also created a dashboard in PowerBI.
+
+We used Twilio to send reminders and to collect contact information. For this, I created the flows of messages in the platform and the Python codes that triggers the delivery of them. Also, we used YAPE, PLIN and phone recharges to deliver the incentives to the participants. Lastly, I helped in the elaboration of the slides and to present the results of field collection to the principal investigators. 
