--- a/_publications/2022-04-01-i-2.md
+++ b/_publications/2022-04-01-i-2.md
@@ -9,9 +9,9 @@ paperurl: ''
 citation: ''
 ---
 
-Assited in the implementation of the remote project "Socioemotional Support in times of COVID-19" in Nicaragua, an experimental intervention carried out in partnership with the Ministry of Family, BID and Zamora Teran's Foundation in Nicaragua. \\
+Assited in the implementation of the remote project "Socioemotional Support in times of COVID-19" in Nicaragua, an experimental intervention carried out in partnership with the Ministry of Family, BID and Zamora Teran's Foundation in Nicaragua.
 
-As usual, I helped in programming the survey in SurveyCTO, as well as the implementation of remote pilots. However, since the survey was self-managed and via messages, we used Twilio, an cloud contact center platform that allowed us to sends Whatsapp messages, to deliver the link fo the survey and reminders to complete it. \\
+As usual, I helped in programming the survey in SurveyCTO, as well as the implementation of remote pilots. However, since the survey was self-managed and via messages, we used Twilio, an cloud contact center platform that allowed us to sends Whatsapp messages, to deliver the link fo the survey and reminders to complete it.
 
-I collaborated in creating the flows of messages in the platform, the Python codes that triggers the delivery of them and the data collection flow using Google API and its Google Sheets services. For the progress review of the data colleted by this platform, I also created a dashboard in PowerBI. \\
+I collaborated in creating the flows of messages in the platform, the Python codes that triggers the delivery of them and the data collection flow using Google API and its Google Sheets services. For the progress review of the data colleted by this platform, I also created a dashboard in PowerBI.
 
