--- a/_teaching/2021-11-01-e-2.md
+++ b/_teaching/2021-11-01-e-2.md
@@ -1,12 +1,20 @@
 ---
-title: "Assited in Nudging Microentrepreneurs into Formalization under High Drug-Related Violence: Experimental Evidence from Urban Brazil"
+title: "When migrating is not enough:  A comparison of migrant and non-migrant job quality in urban Peru between 2019 and 2020"
 collection: publications
-permalink: /publication/2021-03-01-g-1
-excerpt: 'While working as a research intern at GRADE'
-date: 2021-03-01
-venue: ''
-paperurl: ''
-citation: ''
+permalink: /publication/2021-11-01-e-2
+excerpt: 'This research seeks to analyse the job quality of interdepartmental migrants in urban areas during 2019 and 2020. Job quality, under the decent work approach, encompasses dimensions of workers' well-being. After constructing an index and finding that job quality deteriorated, we find, using a generalised ordinal logit, that there is no-relation between being migrant and job quality. Nonetheless there are other sociodemographic characteristics that migrants usually share which are linked to the lowest job quality.'
+date: 2021-11-01
+venue: 'Economica'
+paperurl: 'https://revistas.pucp.edu.pe/index.php/economica/article/view/25082'
+citation: 'Delgado, D. & Riega, S (2021). Cuando migrar no es suficiente: una comparación de la calidad del empleo de los migrantes y no migrantes en el Perú urbano en el 2019 y 2020. Económica, (13), 101-121. Recuperado a partir de https://revistas.pucp.edu.pe/index.php/economica/article/view/25082'
 ---
 
-Assited in the elaboration of estimations and graphs using an RCT dataset related to the impact evaluation of reminders on labour formalization programme in Brazil. I made use of Stata and LateX to this programm the calculations as well as to model the tables and them exported to Latex. I calcuted the heterogenous effects of programmes between clusters, made test to the compare two coefficients of the same estimation and graphed the evolution of the ATE effects in time.
+The quality of employment and migration are, together, relevant topics in the current discussion. In this sense, this article studies the quality of employment and its relationship with migrant status for the years 2019 and 2020.  It was found that, in general, job quality declined dramatically from 2019 to 2020. Such results are a consequence of the Covid-19 crisis.
+
+It was found that there are characteristics related to lower or higher levels of job quality.  Speaking a language other than Spanish is related to lower levels of job quality. Having a migrant mother is related to higher levels of job quality.  In addition, working in a small or medium-sized company is related to lower levels of job quality. However, when considering being a migrant or analyzing groups of migrants with some of these characteristics, they do not seem to be significantly related to better or worse levels of job quality with respect to the rest of the sample of workers. These results hold in both years and in almost all the subsamples analyzed. 
+
+As previously mentioned, this can be explained, in part, by the underrepresentation of migrants in the ENAHO.  Not having enough registered migrants induces our estimates to be inefficient and not to rescue their significance. This does not happen when we estimate the effect of sociodemographic and labor characteristics mentioned in the literature, such as having a mother tongue other than Spanish.  However, this does not obviate the disastrous fact that for migrant and non-migrant workers their quality of employment has been drastically reduced.
+
+In this sense, one recommendation is the elaboration of representative surveys for migrants that will allow us to obtain better evidence on their working conditions.  Likewise, it is necessary to motivate targeted measures for those groups that we have identified as vulnerable, without leaving aside other migrants because, as we have seen, this group in general is in a precarious labor situation.
+
+Similarly, it is important to remember the declining trend in the quality of employment in the country from 2019 to 2020. In this line, it is essential not to forget about the progress in the quality of employment, and specifically, in certain dimensions; as it highlights the need to consolidate these, as well as to improve the less attended dimensions.
